--- a/Homework/Tree/pritugin_hw2.ipynb
+++ b/Homework/Tree/pritugin_hw2.ipynb
@@ -102,8 +102,8 @@
     "        elif criterion == 'entropy':\n",
     "            self.G_function = self.__entropy\n",
     "            self.G_feature = lambda y: -((np.bincount(y) / y.size) *\n",
-    "                                         (np.bincount(y) /\n",
-    "                                          y.size).log2()).sum()\n",
+    "                                         np.log2(np.bincount(y) /\n",
+    "                                          y.size)).sum()\n",
     "        elif criterion == 'misclass':\n",
     "            self.G_function = self.__misclass\n",
     "            self.G_feature = lambda y: 1 - (np.bincount(y) /\n",
