--- a/DM3/HW1/iGBRT.ipynb
+++ b/DM3/HW1/iGBRT.ipynb
@@ -18,13 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Решаем задачу восстановления функции в общем контексте обучения с учителем.\n",
+    "##### Решаем задачу восстановления функции в общем контексте обучения с учителем.\n",
     "\n",
-    "У нас есть набор пар признаков $ x_i $ и целевых переменных $ y_i $ на котором мы будем восстанавливать зависимость вида $ y = f(x) $. \n",
+    "##### У нас есть набор пар признаков $ x_i $ и целевых переменных $ y_i $ на котором мы будем восстанавливать зависимость вида $ y = f(x) $. \n",
     "\n",
-    "Восстанавливать будем приближением $ \\hat{f}(x) $.\n",
+    "##### Восстанавливать будем приближением $ \\hat{f}(x) $.\n",
     "\n",
-    "Функция потерь $ L(y, f) = (y - f)^2 $, которую мы будем минимизировать:\n",
+    "##### Функция потерь $ L(y, f) = (y - f)^2 $, которую мы будем минимизировать:\n",
     "\n",
     "# $ y \\approx \\hat{f}(x) $\n",
     "\n",
@@ -46,9 +46,9 @@
    "source": [
     "# Индукция\n",
     "\n",
-    "Предположим, что у нас уже есть $ t-1 $ модель\n",
+    "##### Предположим, что у нас уже есть $ t-1 $ модель\n",
     "\n",
-    "Нужно построить модель под номером $ t $\n",
+    "##### Нужно построить модель под номером $ t $\n",
     "\n",
     "# $ \\hat{f}(x) = \\sum_{i=0}^{t-1} \\hat{f}_i(x) $\n",
     "\n",
