HW1: fix len lines

--- a/DM3/HW1/iGBRT.ipynb
+++ b/DM3/HW1/iGBRT.ipynb
@@ -183,10 +183,8 @@
     "    def _dL(y_right: np.array, y_pred: np.array) -> np.array:\n",
     "        return 2*(y_right - y_pred)\n",
     "        \n",
-    "    # TODO Поиск коэффициента можно улучшить\n",
-    "    # 1) Бинарный поиск\n",
-    "    # 2) \"Умный\" поиск (?)\n",
-    "    def __searchBestRo(self, y_right: np.array, y_pred: np.array, new_predict: np.array) -> float:\n",
+    "    def __searchBestRo(self, y_right: np.array, y_pred: np.array,\n",
+    "                       new_predict: np.array) -> float:\n",
     "        ro = -0.5\n",
     "        buf = y_right - y_pred\n",
     "        loss = [self._L(y_right, y_pred + ro*new_predict)]\n",
@@ -217,7 +215,8 @@
     "            first_model = ConstModel(2)\n",
     "        elif self.first_model_type == 'RF':\n",
     "            first_model = RandomForestRegressor(n_estimators=20)\n",
-    "            parameters = {'n_estimators': [10,20,30], 'max_depth': [2,3,5], 'criterion': ['mse', 'mae'] }\n",
+    "            parameters = {'n_estimators': [10,20,30],\n",
+    "                          'max_depth': [2,3,5], 'criterion': ['mse', 'mae'] }\n",
     "            clf = GridSearchCV(first_model, parameters, cv=3)\n",
     "            clf.fit(X, y)\n",
     "            first_model = clf.best_estimator_\n",
